# Simple-Platformer

./: CMakeLists.txt
levels/: lvl1.txt
src/: app.cpp  app.h  entity.h  input.cpp  input.h  main.cpp
